demos/services/ingress/configuration.yml/ingress-wear.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear
  labels:
    name: ingress-wear
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/wear"      
        backend:
          service: 
            name: wear-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/watch"      
        backend:
          service:
            name: watch-service
            port: 
              number: 80
# kubectl create ingress <ingress-name> --rule="host/path=service:port"

# kubectl create ingress ingress-test --rule="wear.my-online-store.com/wear*=wear-service:80"

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /app1
  name: approot
  namespace: critical-space
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pay-service
            port: 
              number: 80
